--- a/main.css
+++ b/main.css
@@ -13,6 +13,8 @@ body {
 }
 .win98 .window .content{
 	text-align: center;
+	font-size: 1.2em;
+	margin-bottom: 2px;
 }
 .win98 .window .header .buttons button .minimize{
 	display: block;
@@ -127,11 +129,14 @@ body {
 	background-color: white;
 	text-align: left;
 	letter-spacing: 1px;
+	padding: 3px 2px;
 }
 
-.content{
-	font-size: 1.2em;
-	margin-bottom: 5px;
-	/*width: 100%;
-	height: 100%;*/
+.foldwin{
+	overflow: hidden !important; /*Let's hope I never need this again*/
+}
+.innerFolder{
+	background-color:white;
+	height: 100%;
+	overflow: auto;
 }
